# MemorySocket

./: .gitmodules  CMakeLists.txt  README.md
include/memory_socket/: Log.hpp  MemorySocket  Ordered_Access.h  timeout
src/: Log.cpp  MemorySocket.cpp
tests/: CMakeLists.txt  MemorySocket_Tests.cpp  binary_semaphore_test.cpp
